--- a/hyper-boring/Cargo.toml
+++ b/hyper-boring/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hyper-boring"
-version = "2.1.2"
+version = "3.0.0"
 authors = ["Steven Fackler <sfackler@gmail.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
 edition = "2018"
 description = "Hyper TLS support via BoringSSL"
@@ -11,23 +11,24 @@ readme = "README.md"
 exclude = ["test/*"]
 
 [features]
-default = ["runtime"]
-
-runtime = ["hyper/runtime"]
+default = []
 fips = ["tokio-boring/fips"]
 
 [dependencies]
 antidote = "1.0.0"
 http = "0.2"
-hyper = { version = "0.14", default-features = false, features = ["client"] }
+hyper = { version = "1.0.0-rc.3",  default-features = false }
+hyper-util = { git = "https://github.com/howardjohn/hyper-util", branch = "client/h2-timer", features = ["client"] }
 linked_hash_set = "0.1"
 once_cell = "1.0"
 boring = { version = ">=1.1.0,<3.0.0", path = "../boring" }
 tokio = "1"
 tokio-boring = { version = "2", path = "../tokio-boring" }
 tower-layer = "0.3"
+tower-service = "0.3"
 
 [dev-dependencies]
-hyper = { version = "0.14", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
+hyper-util = { git = "https://github.com/howardjohn/hyper-util", branch = "client/h2-timer", features = ["full"] }
 futures = "0.3"
+http-body-util = "0.1.0-rc.2"
