--- a/boring-sys/Cargo.toml
+++ b/boring-sys/Cargo.toml
@@ -66,6 +66,14 @@ rpk = []
 # Enables experimental post-quantum crypto (https://blog.cloudflare.com/post-quantum-for-all/)
 pq-experimental = []
 
+# Disables git patching of the BoringSSL sources for features like `rpk` and `pq-experimental`, but
+# keeps the related Rust API. 
+# 
+# Supposed to be used with either pre-compiled BoringSSL (via `BORING_BSSL_PATH` env variable) or 
+# with custom BoringSSL sources (via `BORING_BSSL_SOURCE_PATH` env variable) already containing 
+# required patches.
+no-patches = []
+
 [build-dependencies]
 bindgen = { workspace = true }
 cmake = { workspace = true }
