--- a/boring/Cargo.toml
+++ b/boring/Cargo.toml
@@ -28,6 +28,14 @@ rpk = ["boring-sys/rpk"]
 # Enables experimental post-quantum crypto (https://blog.cloudflare.com/post-quantum-for-all/)
 pq-experimental = ["boring-sys/pq-experimental"]
 
+# Disables git patching of the BoringSSL sources for features like `rpk` and `pq-experimental`, but
+# keeps the related Rust API. 
+# 
+# Supposed to be used with either pre-compiled BoringSSL (via `BORING_BSSL_PATH` env variable) or 
+# with custom BoringSSL sources (via `BORING_BSSL_SOURCE_PATH` env variable) already containing 
+# required patches.
+no-patches = ["boring-sys/no-patches"]
+
 [dependencies]
 bitflags = { workspace = true }
 foreign-types = { workspace = true }
