--- a/tokio-boring/Cargo.toml
+++ b/tokio-boring/Cargo.toml
@@ -28,12 +28,12 @@ rpk = ["boring/rpk"]
 # Enables experimental post-quantum crypto (https://blog.cloudflare.com/post-quantum-for-all/)
 pq-experimental = ["boring/pq-experimental"]
 
-# Disables git patching of the BoringSSL sources for features like `rpk` and `pq-experimental`, but
-# keeps the related Rust API. 
+# Disables git patching of the BoringSSL sources for features like `rpk` and `pq-experimental`,
+# but keeps the related Rust API.
 # 
-# Supposed to be used with either pre-compiled BoringSSL (via `BORING_BSSL_PATH` env variable) or 
-# with custom BoringSSL sources (via `BORING_BSSL_SOURCE_PATH` env variable) already containing 
-# required patches.
+# Supposed to be used with either pre-compiled BoringSSL (via `BORING_BSSL{,_FIPS}_PATH` env
+# variable) or  with custom BoringSSL sources (via `BORING_BSSL{,_FIPS}_SOURCE_PATH` env variable)
+# already containing required patches.
 no-patches = ["boring/no-patches"]
 
 [dependencies]
