Use gcc/g++ as the compilers for windows-gnu, not Clang

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -160,7 +160,16 @@ jobs:
         - thing: x86_64-mingw
           target: x86_64-pc-windows-gnu
           rust: stable
-          os: ubuntu-latest
+          os: windows-latest
+          check_only: true # tests are flaky for unclear reasons
+          custom_env:
+            CC: gcc
+            CXX: g++
+            C_INCLUDE_PATH: "C:\\msys64\\usr\\include"
+            CPLUS_INCLUDE_PATH: "C:\\msys64\\usr\\include"
+            LIBRARY_PATH: "C:\\msys64\\usr\\lib"
+          # CI's Windows doesn't have required root certs
+          extra_test_args: --workspace --exclude tokio-boring --exclude hyper-boring
         - thing: i686-msvc
           target: i686-pc-windows-msvc
           rust: stable-x86_64-msvc
