hyper and tokio "full" feature for dev builds only
This was an accidental regression in
d1ee9bfd868a472a04f92e15e011d0fc42db6b88 which leads to pulling in the
full featureset of tokio and hyper for all dependents of tokio-boring
and hyper-boring.

Fixes #179.

--- a/tokio-boring/Cargo.toml
+++ b/tokio-boring/Cargo.toml
@@ -33,5 +33,5 @@ tokio = { workspace = true }
 
 [dev-dependencies]
 futures = { workspace = true }
-tokio = { workspace = true }
+tokio = { workspace = true, features = [ "full" ] }
 anyhow = { workspace = true }
