--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,11 +27,11 @@ libc = "0.2"
 hex = "0.4"
 rusty-hook = "^0.11"
 futures = "0.3"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1" }
 anyhow = "1"
 antidote = "1.0.0"
 http = "0.2"
-hyper = { version = "0.14", default-features = false, features = ["full"] }
+hyper = { version = "0.14", default-features = false }
 linked_hash_set = "0.1"
 once_cell = "1.0"
 tower-layer = "0.3"
