--- a/hyper-boring/Cargo.toml
+++ b/hyper-boring/Cargo.toml
@@ -40,6 +40,6 @@ tokio-boring = { workspace = true }
 tower-layer = { workspace = true }
 
 [dev-dependencies]
-hyper = { workspace = true }
-tokio = { workspace = true }
+hyper = { workspace = true, features = [ "full" ] }
+tokio = { workspace = true, features = [ "full" ] }
 futures = { workspace = true }
