--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,14 @@ members = [
 resolver = "2"
 
 [workspace.package]
-version = "3.1.0"
+version = "4.0.0-rc.1"
 repository = "https://github.com/cloudflare/boring"
 edition = "2021"
 
 [workspace.dependencies]
-boring-sys = { version = "3.1.0", path = "./boring-sys" }
-boring = { version = "3.1.0", path = "./boring" }
-tokio-boring = { version = "3.1.0", path = "./tokio-boring" }
+boring-sys = { version = "4.0.0-rc.1", path = "./boring-sys" }
+boring = { version = "4.0.0-rc.1", path = "./boring" }
+tokio-boring = { version = "4.0.0-rc.1", path = "./tokio-boring" }
 
 bindgen = { version = "0.68.1", default-features = false, features = ["runtime"] }
 cmake = "0.1.18"
