--- a/hyper-boring/Cargo.toml
+++ b/hyper-boring/Cargo.toml
@@ -4,7 +4,7 @@ version = { workspace = true }
 authors = ["Steven Fackler <sfackler@gmail.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
 edition = { workspace = true }
 description = "Hyper TLS support via BoringSSL"
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 repository = { workspace = true }
 documentation = "https://docs.rs/hyper-boring"
 readme = "README.md"
