--- a/boring-sys/Cargo.toml
+++ b/boring-sys/Cargo.toml
@@ -81,3 +81,6 @@ bindgen = { workspace = true }
 cmake = { workspace = true }
 fs_extra = { workspace = true }
 fslock = { workspace = true }
+
+[lints.rust]
+unexpected_cfgs = { level = "allow", check-cfg = ['cfg(const_fn)'] }
