--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ boring = { version = "4.9.1", path = "./boring" }
 tokio-boring = { version = "4.9.1", path = "./tokio-boring" }
 
 bindgen = { version = "0.68.1", default-features = false, features = ["runtime"] }
+bytes = "1"
 cmake = "0.1.18"
 fs_extra = "1.3.0"
 fslock = "0.2"
@@ -36,10 +37,15 @@ futures = "0.3"
 tokio = "1"
 anyhow = "1"
 antidote = "1.0.0"
-http = "0.2"
-hyper = { version = "0.14", default-features = false }
+http = "1"
+http-body-util = "0.1.2"
+http_old = { package = "http", version = "0.2" }
+hyper = "1"
+hyper-util = "0.1.6"
+hyper_old = { package = "hyper", version = "0.14", default-features = false }
 linked_hash_set = "0.1"
 once_cell = "1.0"
 openssl-macros = "0.1.1"
 tower = "0.4"
 tower-layer = "0.3"
+tower-service = "0.3"
